; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clkdev.c_clk_find_hw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clkdev.c_clk_find_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.clk_lookup = type { %struct.clk_hw* }

@ENOENT = common dso_local global i32 0, align 4
@clocks_mutex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.clk_hw* @clk_find_hw(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.clk_lookup*, align 8
  %6 = alloca %struct.clk_hw*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @ENOENT, align 4
  %8 = sub nsw i32 0, %7
  %9 = call %struct.clk_hw* @ERR_PTR(i32 %8)
  store %struct.clk_hw* %9, %struct.clk_hw** %6, align 8
  %10 = call i32 @mutex_lock(i32* @clocks_mutex)
  %11 = load i8*, i8** %3, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call %struct.clk_lookup* @clk_find(i8* %11, i8* %12)
  store %struct.clk_lookup* %13, %struct.clk_lookup** %5, align 8
  %14 = load %struct.clk_lookup*, %struct.clk_lookup** %5, align 8
  %15 = icmp ne %struct.clk_lookup* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load %struct.clk_lookup*, %struct.clk_lookup** %5, align 8
  %18 = getelementptr inbounds %struct.clk_lookup, %struct.clk_lookup* %17, i32 0, i32 0
  %19 = load %struct.clk_hw*, %struct.clk_hw** %18, align 8
  store %struct.clk_hw* %19, %struct.clk_hw** %6, align 8
  br label %20

20:                                               ; preds = %16, %2
  %21 = call i32 @mutex_unlock(i32* @clocks_mutex)
  %22 = load %struct.clk_hw*, %struct.clk_hw** %6, align 8
  ret %struct.clk_hw* %22
}

declare dso_local %struct.clk_hw* @ERR_PTR(i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local %struct.clk_lookup* @clk_find(i8*, i8*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
